# MAI_FundAlg_2024

./: .clang-format  .gitignore  2_3.1.txt  2_3.2.txt  2_3.3.txt  2_3.4.txt  2_3.c  2_5.c  3.1  3.c  3_2.c  3_7.c  5.c  Makefile  Makefile.txt  README.md  laba1.2  laba1x10.c  laba1x2.c  output.txt  task_1.c  task_3.c
Lab1/Laba_1.7/: 7.c  a_in.txt  a_out.txt  r_2.txt  r_out.txt
Lab2/Laba_2.10/: 10.c
Lab3/10/: task_10.c  test.c
Lab3/2/: test.c
Lab3/6/: 3.txt  task_6.c  test_interactive.txt
Lab3/8/: task_8.c  test_interactive.txt
Lab3/9/: task_9.c  text.txt
Lab3/test_files/: task_1_test_1_output.txt  task_1_test_2_input.txt
Lab3/test_templates/: template_cmd.txt  template_input_file_result_file_output_file.txt  template_output_file.txt  template_result_file_cmd.txt
Lab4/4/: task_4.c
Lab5/2/: input.txt  task_2.cpp
Lab5/3/: task_3.cpp
Lab5/4/: task_4.cpp
Labs/Lab_2/: Makefile  README.md  compiling.sh
Labs/Lab_3/: Makefile
hints/: Lab1.md
lab2/: CMakeLists.txt  Makefile
lab2/SystemErrors/: errors.c  errors.h
lab2/ex1/: Makefile  ex1.c  ex1.h  main.c
lab2/ex10/: Makefile  ex10.c  ex10.h  main.c  test.c  test.h
lab2/ex2/: Makefile  ex2.c  ex2.h  main.c  test.c  test.h
lab2/ex3/: Makefile  ex3.c  ex3.h  main.c  test1  test2
lab2/ex4/: Makefile  ex4.c  ex4.h  main.c  test.c  test.h
lab2/ex5/: Makefile  main.c  overloads.c  overloads.h  test.c  test.h  test_output.txt
lab2/ex6/: Makefile  ex6.c  ex6.h  main.c  test.c  test.h  test_input.txt
lab2/ex7/: Makefile  ex7.c  ex7.h  main.c  test.c  test.h
lab2/ex8/: Makefile  ex8.c  ex8.h  main.c  test.c  test.h
lab2/ex9/: Makefile  ex9.c  ex9.h  main.c  test.c  test.h
lab2/test_files/: task_10_test_1_output  task_2_test_1_input  task_2_test_1_output  task_2_test_2_input  task_2_test_2_output  task_3_test_1_output  task_3_test_2_input  task_3_test_2_output  task_3_test_3_output  task_4_test_1_output  task_5_test_1_output  task_6_test_1_input  task_6_test_1_output  task_7_test_1_output  task_8_test_1_output  task_9_test_1_output  task_9_test_2_output
lab2/test_templates/test_templates/: failed_ifile_ofile  failed_ifile_rfile_ofile  success_cmd
lab2/vector/: charvector.c  charvector.h  intvector.c  intvector.h  stringvector.c
lab3/ex10/: Makefile  ex10.c  ex10.h  main.c  result  test
lab3/ex9/: Makefile  ex9.c  ex9.h  main.c  test  test2
lab4/: .clang-format  CMakeLists.txt  Makefile
lab4/ex1/: Makefile  ex1.c  ex1.h  main.c  test  test2  test3  test4
lab4/ex2/: Makefile  ex2.c  ex2.h  in.txt  main.c  test
lab4/ex7/: Makefile  ex7.c  ex7.h  main.c  test
lab4/ex9/: Makefile  main.c  sss
lab4/ex9/application/: application.c  application.h
lab4/ex9/auxiliary_application_1/: auxiliary_application_1.c
lab4/ex9/auxiliary_application_2/: auxiliary_application_2.c
lab4/ex9/data-storages/: data-storages.c  data-storages.h
lab4/ex9/data-storages/bin-tree/: bin-tree.c  bin-tree.h
lab4/ex9/data-storages/dinamyc-array/: dinamyc-array.c  dinamyc-array.h
lab4/ex9/data-storages/hash-table/: hash-table.c  hash-table.h
lab4/ex9/data-storages/trie/: trie.c  trie.h
lab4/ex9/department/: department.c  department.h
lab4/ex9/heaps/: heaps.c  heaps.h
lab4/ex9/heaps/binary-heap/: binary-heap.c  binary-heap.h
lab4/ex9/heaps/binomial-heap/: binomial-heap.c  binomial-heap.h
lab4/ex9/heaps/fibonacci-heap/: fibonacci-heap.c  fibonacci-heap.h
lab4/ex9/heaps/leftist-heap/: leftist-heap.c  leftist-heap.h
lab4/ex9/heaps/skew-heap/: skew-heap.c  skew-heap.h
lab4/ex9/heaps/treap/: treap.c  treap.h
lab4/ex9/main_files/: main-stage.c  main-stage.h  preparing.c  preparing.h
lab4/ex9/process_files/: process_files.c  process_files.h
lab4/lib/mstring/: mstring.c  mstring.h
lab4/lib/vector/: charvector.c  charvector.h  intvector.c  intvector.h  stringvector.h  test
lab4/lib2/SystemErrors2/: Makefile  errors.c  errors.h
lab4/lib2/mstring/: Makefile  mstring.c  mstring.h
lab4/lib2/universal_vector/: vector.c  vector.h
lab4/lib2/vector/: Makefile  charvector.c  charvector.h  intvector.c  intvector.h  stringvector.c  stringvector.h
lab4/test_files/: in.txt  task_1_test_2_correct_output  task_1_test_2_input  task_1_test_3_correct_output  task_1_test_3_input  task_2_input_file  task_2_test_2_correct_output_file1  task_2_test_2_correct_output_stdout  task_2_test_3_correct_output_file2  task_2_test_5_correct_output_file4  task_7_test_2_correct_output
lab4/test_templates/: failed_cmd  success_rfile_ofile  template_input_file_output_file  template_result_file_output_file
lab4/test_templates/test_templates/: failed_ifile_rfile_ofile  success_ifile_ofile  success_ifile_rfile_ofile  template_input_file_result_file_output_file  template_result_file_cmd  template_result_file_output_file
lab5/: .clang-format  CMakeLists.txt
lab5/ex1/: Makefile  binary_int_test.cpp  ex1.cpp  ex1.h  ex1.hpp  main.cpp
lab5/ex2/: Makefile  a.out  ex2.cpp  ex2.h  ex2.hpp  main.cpp  output  rr.txt
lab5/ex3/: ex3.cpp  ex3.h  ex3.hpp  main.cpp  test_logical_values_array.cpp
lab5/ex4/: ex4.cpp  ex4.h  ex4.hpp  main.cpp  test_complex.cpp
lab5/ex5/: ex5.cpp  ex5.h  main.cpp
lab5/ex6/: ex6.cpp  ex6.h  ex6.hpp  main.cpp  test_vector.cpp
lab5/ex7/: ex7.cpp  ex7.h  ex7.hpp  main.cpp  test_ex7.cpp
labs2/: Makefile.txt
labs2/1/: task_1.c
labs2/2/: task_2.c
labs2/3/: 1.txt  2.txt  3.txt  task_3.c
labs3/: Makefile.txt
materials/: CompVariad.pptx  Lesson_1.md
task1_test/: task1_output_1.txt  task1_output_2.txt
task3_test/: task3_input_1.txt  task3_input_2.txt  task3_input_3.txt  task3_output_1.txt  task3_output_3.txt
task5_test/: failed_file_input_task5.txt  failed_file_output_task5.txt  failed_search_input_task5.txt  failed_search_output_task5.txt  failed_sort_input_task5.txt  failed_sort_output_task5.txt  student_list.txt  success_better_input_task5.txt  success_better_output_task5.txt  success_command_input_task5.txt  success_command_output_task5.txt  success_fsearch_input_task5.txt  success_fsearch_output_task5.txt  test_better.txt  test_student.txt
test_templates/: failed_cmd
(+165 files in other folders)
